# OFVSM

./: .cursorrules  .gitignore  ARCHITECTURE_ZONES.md  QA_AUDIT.md  QA_FINAL_CHECK.md  SCALABILITY_PLAN.md  SYSTEM_AUDIT_LOG.md  TEST_PLAN.md  eslint.config.mjs  next.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.tsx
.claude/plans/: ghost-engine-phase3.md  phase4-orchestration.md
.husky/: pre-push
anchor/: Anchor.toml  Cargo.toml
anchor/programs/vecterai_locker/: Cargo.toml
anchor/programs/vecterai_locker/src/: error.rs  lib.rs  state.rs
public/: manifest.json  sw.js
scripts/: smart-test.sh  verify-deployment.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/portfolio/: page.tsx
src/app/overview/: page.tsx
src/app/shield/: page.tsx
src/components/: Providers.tsx
src/components/features/cockpit/: TotalValueCard.tsx  (+1 more)
src/components/shared/: AppShell.tsx  BottomNav.tsx  InstallPrompt.tsx  LegalShield.tsx  index.ts
src/core/: pricingConfig.ts
src/core/services/: TelegramService.ts
src/core/utils/: audio.ts  crypto.ts  haptics.ts  index.ts
src/lib/supabase/: client.ts  middleware.ts  server.ts
src/store/: authStore.ts
src/types/: database.ts  index.ts
supabase/functions/launch-cron/: index.ts
supabase/migrations/: 20260304_scheduled_launches.sql  20260305_execution_params.sql  20260306_safety_events.sql  20260307_trust_scores.sql  20260308_user_wallets.sql
tests/integration/: ForgeToVault.test.ts
(+112 files in other folders)
