# @file Cargo.toml
# @summary Workspace Cargo configuration for VECTERAI Foundation Anchor programs
# @dependencies anchor-lang, spl-token-2022

[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
